style.css
body {
    display: flex;
    flex-direction: column;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #1F2937;
    color: #F9FAF8;
    margin: 0;
    font-size: 18px;
}

#header-container {
    margin-left: 80px;
    display: flex;
    color: #F9FAF8;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 30px;
}

#hero-text {
    font-size: 48px;
    font-weight: bolder;
    width: 500px;
    color: #F9FAF8;
}

#sub-hero-text{
    font-size: 24px;
    color: #F9FAF8;
}

#header-list {
    list-style: none;
    display: flex;
    justify-content: space-around;
    gap: 32px;
    font-weight: lighter;
    margin-right: 8px;
    padding: 0;
}

#first-doggo {
    height: 400px;
    width: 650px;
    margin-right: 80px;
}

.facts-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #F9FAF8;
    color: #1F2937;
}

#fun-facts-text {
    font-weight: bolder;
}

ul {
    width: 1000;
    text-align: center;

}

#doggo-facts {
    display: flex;
    justify-content: space-evenly;
    gap: 80px;
    list-style: none;
    border: 20px;
}

.facts-border {
    border-style: solid;
    border-radius: 20px;
    height: 150px;
    width: 150px;
    color:#3882f6;
}

.doggo-facts-rectangles {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
}

.content-container {
    display: flex;
    justify-content: space-between;
    margin-bottom: 70px;
    margin-left: 80px;

}

.inspirational-quote-container {
    display: flex;
    height: 350px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #E5E7EB;
}

.inspirational-quote {
    font-size: 36px;
    font-weight: lighter;
    font-style: italic;
    text-align: center;
    color: #1F2937;
}

footer {
    display: flex;
    align-items: center;
    justify-content: center;
}

button {
    border-style: dotted;
    border-color: #3882f6;
    border-radius: 10px;
}

#popup {
    display: flex;
    flex-direction: column;
    align-items: center;
    border-style: solid;
    border-radius: 10px;
    border-color: #3882f6;
    background-color: #3882f6;
    width: 500px;
    margin: 20px;
}

